--- a/app/deploy.yaml
+++ b/app/deploy.yaml
@@ -32,6 +32,6 @@ spec:
       containers:
       - name: app
         # Because kube-registry-proxy is present localhost access is via http instead of https
-        image: localhost:5000/app:0.0.1
+        image: webmakaka/app:0.0.1
         ports:
         - containerPort: 8080
